Follow-up fixes

--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/bounce_off_the_walls/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/bounce_off_the_walls/index.html
@@ -96,7 +96,7 @@ if(y + dy &gt; canvas.height-ballRadius || y + dy &lt; ballRadius) {
 <p>{{JSFiddleEmbed("https://jsfiddle.net/end3r/redj37dc/","","395")}}</p>
 
 <div class="note">
-<p><strong>Note:</strong> try changing the color of the ball to a random color every time it hits the wall.</p>
+<p><strong>Note:</strong> Try changing the color of the ball to a random color every time it hits the wall.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
