--- a/files/en-us/games/tutorials/touch_event_horizon/index.html
+++ b/files/en-us/games/tutorials/touch_event_horizon/index.html
@@ -7,7 +7,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p>>This article is for Touch Event Horizon and A Game Related To It</p>
+<p>This article is for Touch Event Horizon and A Game Related To It</p>
 
 <h2 id="Touch_Gestures_and_Events">Touch Gestures and Events</h2>
 
