[Markdown] [Learn] Fix dl elements (#9570)
* Learn area: fix dl elements

* Better indentation

* Even better indentation

--- a/files/en-us/learn/common_questions/what_is_a_domain_name/index.html
+++ b/files/en-us/learn/common_questions/what_is_a_domain_name/index.html
@@ -55,9 +55,11 @@ tags:
 	<br>
 	The full list of TLDs is <a href="https://www.icann.org/resources/pages/tlds-2012-02-25-en">maintained by ICANN</a>.</dd>
 	<dt>Label (or component)</dt>
-	<dd>The labels are what follow the TLD. A label is a case-insensitive character sequence anywhere from one to sixty-three characters in length, containing only the letters A through Z, digits 0 through 9, and the - character (which may not be the first or last character in the label). <code>a</code>, <code>97</code>, and <code>hello-strange-person-16-how-are-you</code> are all examples of valid labels.</dd>
-	<dd>The label located right before the TLD is also called a <em>Secondary Level Domain</em> (SLD).</dd>
-	<dd>A domain name can have many labels (or components). It is not mandatory nor necessary to have 3 labels to form a domain name. For instance, www.inf.ed.ac.uk is a valid domain name. For any domain you control (e.g. <a href="https://mozilla.org">mozilla.org</a>), you can create "subdomains" with different content located at each, like <a href="https://developer.mozilla.org">developer.mozilla.org</a>, <a href="https://iot.mozilla.org/">iot.mozilla.org</a>, or <a href="https://wiki.developer.mozilla.org">wiki.developer.mozilla.org</a>. </dd>
+	<dd>
+    <p>The labels are what follow the TLD. A label is a case-insensitive character sequence anywhere from one to sixty-three characters in length, containing only the letters A through Z, digits 0 through 9, and the - character (which may not be the first or last character in the label). <code>a</code>, <code>97</code>, and <code>hello-strange-person-16-how-are-you</code> are all examples of valid labels.</p>
+    <p>The label located right before the TLD is also called a <em>Secondary Level Domain</em> (SLD).</p>
+    <p>A domain name can have many labels (or components). It is not mandatory nor necessary to have 3 labels to form a domain name. For instance, www.inf.ed.ac.uk is a valid domain name. For any domain you control (e.g. <a href="https://mozilla.org">mozilla.org</a>), you can create "subdomains" with different content located at each, like <a href="https://developer.mozilla.org">developer.mozilla.org</a>, <a href="https://iot.mozilla.org/">iot.mozilla.org</a>, or <a href="https://wiki.developer.mozilla.org">wiki.developer.mozilla.org</a>.</p>
+  </dd>
 </dl>
 
 <h3 id="Buying_a_domain_name">Buying a domain name</h3>
