--- a/files/en-us/learn/common_questions/what_is_accessibility/index.html
+++ b/files/en-us/learn/common_questions/what_is_accessibility/index.html
@@ -48,8 +48,10 @@ tags:
 
 <dl>
  <dt>Hearing impairment</dt>
- <dd>How does a hearing-impaired person benefit from a video? You have to provide subtitles —or even better, a full text transcript.</dd>
- <dd>Also, make sure people can adjust the volume to accommodate their unique needs.</dd>
+ <dd>
+   <p>How does a hearing-impaired person benefit from a video? You have to provide subtitles —or even better, a full text transcript.</p>
+   <p>Also, make sure people can adjust the volume to accommodate their unique needs.</p>
+ </dd>
  <dt>Visual impairment</dt>
  <dd>Again, provide a text transcript that a user can consult without needing to play the video, and an audio-description (an off-screen voice that describes what is happening in the video).</dd>
  <dt>Pausing capacity</dt>
