--- a/files/en-us/games/tutorials/touch_event_horizon/index.html
+++ b/files/en-us/games/tutorials/touch_event_horizon/index.html
@@ -7,7 +7,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p><span class="seoSummary">This article is for Touch Event Horizon and A Game Related To It</span></p>
+<p>This article is for Touch Event Horizon and A Game Related To It</p>
 
 <h2 id="Touch_Gestures_and_Events">Touch Gestures and Events</h2>
 
@@ -37,4 +37,4 @@ tags:
 
 <h2 id="Summary">Summary</h2>
 
-<p><span class="seoSummary">This tutorial shows how to use Touch Events to create a game on a &lt;canvas&gt;. This is a multi-player game relying on the Tap and Drag gestures.</span></p>
+<p>This tutorial shows how to use Touch Events to create a game on a &lt;canvas&gt;. This is a multi-player game relying on the Tap and Drag gestures.</p>
