More Markdown fixes for Learn area

--- a/files/en-us/learn/javascript/first_steps/what_is_javascript/index.html
+++ b/files/en-us/learn/javascript/first_steps/what_is_javascript/index.html
@@ -342,13 +342,9 @@ for(let i = 0; i &lt; buttons.length ; i++) {
 
 <p>Here is a visual representation of the different script loading methods and what that means for your page:</p>
 
-<figure>
-  <img src="async-defer.jpg" alt="async vs defer" >
-  <figcaption>Image from the <a href="https://html.spec.whatwg.org/images/asyncdefer.svg" target="_blank" >HTML spec</a>, copied and cropped to a reduced version, under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a> license terms.
-  </figcaption>
-</figure>
+<img src="async-defer.jpg" alt="async vs defer" >
 
-<br>
+<p><em>This image is from the <a href="https://html.spec.whatwg.org/images/asyncdefer.svg" target="_blank" >HTML spec</a>, copied and cropped to a reduced version, under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a> license terms.</em></p>
 
 <p>For example, if you have the following script elements:</p>
 
