--- a/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/ember_conditional_footer/index.html
+++ b/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/ember_conditional_footer/index.html
@@ -227,7 +227,7 @@ toggleCompletion(todo) {
  </li>
 </ol>
 
-<p>Try restarting the dev server and going to <code>localhost:4200</code> again, and you'll now see that we have a fully-operational <s>battlestation</s> “todos left” counter and Clear button:</p>
+<p>Try restarting the dev server and going to <code>localhost:4200</code> again, and you'll now see that we have a fully-operational “todos left” counter and Clear button:</p>
 
 <p><img alt="todos being marked as complete, and cleared" src="todos-being-marked-completed-and-cleared.gif"></p>
 
