Games: Remove inline styles

--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_three.js/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_three.js/index.html
@@ -168,7 +168,7 @@ render();
 
 <p>Congratulations, you've created an object in a 3D environment! This might have proven easier than you first thought? Here's how it should look:</p>
 
-<p><img alt="Blue cube on a gray background rendered with Three.js." src="cube.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Blue cube on a gray background rendered with Three.js." src="cube.png"></p>
 
 <p>And here's the code we have created so far:</p>
 
