--- a/files/en-us/games/techniques/3d_on_the_web/webvr/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/webvr/index.html
@@ -19,7 +19,7 @@ tags:
 
 <p>With the popularity of Oculus Rift and a lot of other devices in production coming soon to the market, the future looks bright — we already have sufficient technology to make the VR experience "good enough" for playing games. There are many devices to chose from: desktop ones like Oculus Rift or HTC Vive, through consoles with Playstation VR (which admittedly doesn't support WebVR at this time), to mobile experiences like Gear VR or Google Cardboard.</p>
 
-<p><img alt="" src="hmds.jpg" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="hmds.jpg"></p>
 
 <div class="note">
 <p><strong>Note:</strong> For more information, read our <a href="/en-US/docs/Web/API/WebVR_API/Concepts">WebVR Concepts</a> article.</p>
@@ -101,7 +101,7 @@ tags:
 
 <p>The first WebVR experiments and demos used Three.js as it's probably the most popular 3D engine for the web. See the <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/effects/VREffect.js">VREffect</a> and <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/controls/VRControls.js">VRControls</a> functions available on the Three.js github to help you implement and handle WebVR with Three.js.</p>
 
-<p><img alt="" src="sechelt.jpg" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="sechelt.jpg"></p>
 
 <p>Boris Smus has written about the concept of <a href="https://smus.com/responsive-vr/">Responsive WebVR</a>, where a single web game can be played on various devices like laptops without VR hardware, PCs with Oculus Rift, or smartphones inside Google Cardboard and still deliver a unique and valuable experience across all of them. It's like responsive design, but applied to the VR world — write once and run in any VR headset ... or without it. You can check the <a href="https://github.com/borismus/webvr-boilerplate">WebVR Boilerplate</a> sources — it's a good example to start learning WebVR from, and a starting point for any web-based VR experience.</p>
 
