--- a/files/en-us/games/techniques/tilemaps/square_tilemaps_implementation_colon__scrolling_maps/index.html
+++ b/files/en-us/games/techniques/tilemaps/square_tilemaps_implementation_colon__scrolling_maps/index.html
@@ -85,6 +85,6 @@ tags:
 
 <p>Our scrolling tilemap implementation demo pulls the above code together to show what an implementation of this map looks like. You can take a look at a <a href="https://mozdevs.github.io/gamedev-js-tiles/square/scroll.html">live demo</a>, and see <a href="https://github.com/mozdevs/gamedev-js-tiles">its source code</a>.</p>
 
-<p><img alt="" src="untitled.gif" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="untitled.gif"></p>
 
 <p>There's <a href="https://mozdevs.github.io/gamedev-js-tiles/square/logic-grid.html">another demo available</a>, that shows how to make the camera follow a character.</p>
