--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/index.html
@@ -20,7 +20,7 @@ tags:
 
 <p>To get the most out of this series of articles you should already have basic to intermediate <a href="/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript</a> knowledge. After working through this tutorial, you should be able to build your own simple Web games with Phaser.</p>
 
-<p><img alt="Gameplay screen from the game MDN Breakout created with Phaser where you can use your paddle to bounce the ball and destroy the brick field, with keeping the points and lives." src="mdn-breakout-phaser.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Gameplay screen from the game MDN Breakout created with Phaser where you can use your paddle to bounce the ball and destroy the brick field, with keeping the points and lives." src="mdn-breakout-phaser.png"></p>
 
 <h2 id="Lesson_details">Lesson details</h2>
 
