--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/index.html
@@ -19,7 +19,7 @@ tags:
 
 <p>To get the most out of this series of articles you should already have basic to intermediate <a href="/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript</a> knowledge. After working through this tutorial you should be able to build your own simple Web games.</p>
 
-<p><img alt="Gameplay screen from the game MDN Breakout where you can use your paddle to bounce the ball and destroy the brick field, with keeping the score and lives." src="mdn-breakout-gameplay.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Gameplay screen from the game MDN Breakout where you can use your paddle to bounce the ball and destroy the brick field, with keeping the score and lives." src="mdn-breakout-gameplay.png"></p>
 
 <h2 id="Lesson_details">Lesson details</h2>
 
