--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/move_the_ball/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/move_the_ball/index.html
@@ -82,7 +82,7 @@ var dy = -2;
 
 <p>Save your code again and try it in your browser. This works ok, although it appears that the ball is leaving a trail behind it:</p>
 
-<p><img alt="" src="ball-trail.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="ball-trail.png"></p>
 
 <h2 id="Clearing_the_canvas_before_each_frame">Clearing the canvas before each frame</h2>
 
