--- a/files/en-us/games/tutorials/html5_gamedev_phaser_device_orientation/index.html
+++ b/files/en-us/games/tutorials/html5_gamedev_phaser_device_orientation/index.html
@@ -17,7 +17,7 @@ tags:
 
 <p>By the end of the tutorial you will have a fully functional demo game: <a href="https://orb.enclavegames.com/">Cyber Orb</a>. It will look something like this:</p>
 
-<p><img alt="A 2D game board featuring a small yellow ball. There is a large black hole for the ball to escape down, and a number of barriers blocking the ball from escaping." src="cyber-orb.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="A 2D game board featuring a small yellow ball. There is a large black hole for the ball to escape down, and a number of barriers blocking the ball from escaping." src="cyber-orb.png"></p>
 
 <h2 id="Phaser_framework">Phaser framework</h2>
 
