--- a/files/en-us/games/techniques/3d_collision_detection/bounding_volume_collision_detection_with_three.js/index.html
+++ b/files/en-us/games/techniques/3d_collision_detection/bounding_volume_collision_detection_with_three.js/index.html
@@ -118,7 +118,7 @@ THREE.Sphere.prototype.intersectsBox = function (box) {
  <li><a href="https://mozdevs.github.io/gamedev-js-3d-aabb/raw_sphere.html">Sphere vs. Box and Sphere</a></li>
 </ul>
 
-<p><img alt="" src="screen_shot_2015-10-20_at_15.19.16.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="screen_shot_2015-10-20_at_15.19.16.png"></p>
 
 <h2 id="Using_BoxHelper">Using <code>BoxHelper</code></h2>
 
@@ -169,4 +169,4 @@ box3.containsPoint(point.position);</pre>
 
 <p>There are <strong>two demos</strong> you can take a look at on our <a href="https://mozdevs.github.io/gamedev-js-3d-aabb/">live demos page</a>. The <a href="https://mozdevs.github.io/gamedev-js-3d-aabb/api_point.html">first one</a> showcases point vs. box collisions using <code>BoxHelper</code>. The <a href="https://mozdevs.github.io/gamedev-js-3d-aabb/api_box.html">second one</a> performs box vs. box tests.</p>
 
-<p><img alt="" src="screen_shot_2015-10-19_at_12.10.06.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="screen_shot_2015-10-19_at_12.10.06.png"></p>
