--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_babylon.js/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_babylon.js/index.html
@@ -139,7 +139,7 @@ box.material = boxMaterial;
 
 <p>Congratulations, you've created your first object in a 3D environment using Babylon.js! It was easier than you thought, right? Here's how it should look:</p>
 
-<p><img alt="Blue Babylon.js 3D box on the gray background." src="cube.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Blue Babylon.js 3D box on the gray background." src="cube.png"></p>
 
 <p>And here's the code we have created so far:</p>
 
@@ -185,7 +185,7 @@ cylinder.material = cylinderMaterial;
 
 <p>Here's how the scene should look right now:</p>
 
-<p><img alt="Light gray torus, blue box and yellow cylinder created with Babylon.js on the gray background." src="shapes.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Light gray torus, blue box and yellow cylinder created with Babylon.js on the gray background." src="shapes.png"></p>
 
 <p>This works, but it is a bit boring. In a game something is usually happening — we can see animations and such — so let's try to breathe a little life into those shapes by animating them.</p>
 
