--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/engine/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/engine/index.html
@@ -21,7 +21,7 @@ tags:
 
 <p>That's quite an impressive list of features — let's see some in action.</p>
 
-<p><img alt="PlayCanvas engine repository on GitHub." src="playcanvas-github.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="PlayCanvas engine repository on GitHub." src="playcanvas-github.png"></p>
 
 <p>We will try putting together a simple demo first — a cube rendered on the screen. If you have already worked through our <a href="/en-US/docs/Games/Techniques/3D_on_the_web/Building_up_a_basic_demo_with_Three.js">Building up a basic demo with Three.js</a> article (or you are familiar with other 3D libraries) you'll notice that PlayCanvas works on similar concepts: camera, light and objects.</p>
 
@@ -159,7 +159,7 @@ box.model.model.meshInstances[0].material = boxMaterial;
 
 <p>Congratulations, you've created your first object in a 3D environment using PlayCanvas! It was easier than you thought, right? Here's how it should look:</p>
 
-<p><img alt="Blue cube on a gray background rendered with PlayCanvas." src="cube-playcanvas.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Blue cube on a gray background rendered with PlayCanvas." src="cube-playcanvas.png"></p>
 
 <p>And here's the code we have created so far:</p>
 
@@ -213,7 +213,7 @@ cone.model.model.meshInstances[0].material = coneMaterial;
 
 <p>Here's how it should look right now:</p>
 
-<p><img alt="Shapes: blue cube, yellow cylinder and gray cone on a light gray background rendered with PlayCanvas." src="shapes-playcanvas.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Shapes: blue cube, yellow cylinder and gray cone on a light gray background rendered with PlayCanvas." src="shapes-playcanvas.png"></p>
 
 <p>This works, but it is a bit boring. In a game something is usually happening — we can see animations and such — so let's try to breathe a little life into those shapes by animating them.</p>
 
