--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/index.html
@@ -18,7 +18,7 @@ tags:
 
 <p><strong>PlayCanvas</strong> is a popular 3D WebGL game engine, originally created by Will Eastcott and Dave Evans. It is <a href="https://github.com/playcanvas/engine">open sourced on GitHub</a>, with an <a href="https://developer.playcanvas.com/en/user-manual/designer/">editor</a> available online and good <a href="https://developer.playcanvas.com/en/">documentation</a>. The online editor is free for public projects with up to two team members, but there are also <a href="https://playcanvas.com/plans">paid plans</a> if you'd like to run a commercial private project with more developers.</p>
 
-<p><img alt="PlayCanvas website." src="playcanvas-cover.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="PlayCanvas website." src="playcanvas-cover.png"></p>
 
 <h2 id="Games_and_demos">Games and demos</h2>
 
@@ -30,7 +30,7 @@ tags:
  <li>Visualizations like the <a href="https://playcanv.as/b/FQbBsJTd">Star Lord</a> and <a href="https://playcanv.as/p/RqJJ9oU9">BMW i8</a> also take advantage of the engine and showcase what's possible.</li>
 </ul>
 
-<p><img alt="A list of PlayCanvas demos: Tanx, Swooop, Star Lord, BMW i8." src="playcanvas-demos.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="A list of PlayCanvas demos: Tanx, Swooop, Star Lord, BMW i8." src="playcanvas-demos.png"></p>
 
 <div class="note">
 <p><strong>Note:</strong> Check out the list of <a href="https://playcanvas.com/explore">featured demos</a> to find more examples.</p>
