--- a/files/en-us/games/techniques/3d_on_the_web/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/index.html
@@ -73,7 +73,7 @@ tags:
 
 <p>Both <a href="https://unity3d.com/">Unity</a> and <a href="https://www.unrealengine.com/">Unreal</a> can export your game to <a href="/en-US/docs/Web/API/WebGL_API">WebGL</a> with <a href="/en-US/docs/Games/Tools/asm.js">asm.js</a>, so you're free to use their tools and techniques to build games that will be exported to the web.</p>
 
-<p><img alt="" src="shapes.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="shapes.png"></p>
 
 <h2 id="Where_to_go_next">Where to go next</h2>
 
