--- a/files/en-us/games/techniques/control_mechanisms/desktop_with_gamepad/index.html
+++ b/files/en-us/games/techniques/control_mechanisms/desktop_with_gamepad/index.html
@@ -39,7 +39,7 @@ function gamepadHandler(e) {
 
 <p>The second line in the <code>gamepadHandler</code> function shows up on the screen when the device is connected:</p>
 
-<p><img alt="Gamepad connected message under the Captain Rogers game - wireless XBox 360 controller." src="controls-gamepadtext.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Gamepad connected message under the Captain Rogers game - wireless XBox 360 controller." src="controls-gamepadtext.png"></p>
 
 <p>We can also show the <code>id</code> of the device — in the case above we're using the XBox 360 wireless controller.</p>
 
@@ -250,7 +250,7 @@ window.addEventListener("gamepaddisconnected", GamepadAPI.disconnect);</pre>
 
 <p>When pressing the <code>Start</code> button the relevant function will be called to begin the game, and the same approach is used for turning the audio on and off. There's an option wired up to show <code>screenGamepadHelp</code>, which holds an image with all the button controls explained — if the <code>Y</code> button is pressed and held, the help becomes visible; when it is released the help disappears.</p>
 
-<p><img alt="Gamepad info with all the available keys described and explained." src="controls-gamepadinfo.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Gamepad info with all the available keys described and explained." src="controls-gamepadinfo.png"></p>
 
 <h2 id="On-screen_instructions">On-screen instructions</h2>
 
