--- a/files/en-us/games/techniques/tilemaps/square_tilemaps_implementation_colon__static_maps/index.html
+++ b/files/en-us/games/techniques/tilemaps/square_tilemaps_implementation_colon__static_maps/index.html
@@ -106,4 +106,4 @@ tags:
 
 <p>Our static tilemap implementation demo pulls the above code together to show what an implementation of this map looks like. You can see a <a href="https://mozdevs.github.io/gamedev-js-tiles/square/no-scroll.html">live demo</a> and grab the <a href="https://github.com/mozdevs/gamedev-js-tiles">full source code</a>.</p>
 
-<p><a href="https://mozdevs.github.io/gamedev-js-tiles/square/no-scroll.html"><img alt="" src="no-scroll.png" style="display: block; margin: 0px auto;"></a></p>
+<p><a href="https://mozdevs.github.io/gamedev-js-tiles/square/no-scroll.html"><img alt="" src="no-scroll.png"></a></p>
