--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/bounce_off_the_walls/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/bounce_off_the_walls/index.html
@@ -76,7 +76,7 @@ if(y + dy &gt; canvas.height || y + dy &lt; 0) {
 
 <p>Test your code at this point, and you will be impressed — now we have a ball that bounced off all four edges of the canvas! We have another problem however — when the ball hits each wall it sinks into it slightly before changing direction:</p>
 
-<p><img alt="" src="ball-in-wall.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="ball-in-wall.png"></p>
 
 <p>This is because we're calculating the collision point of the wall and the center of the ball, while we should be doing it for its circumference. The ball should bounce right after if touches the wall, not when it's already halfway in the wall, so let's adjust our statements a bit to include that. Update the last code you added to this:</p>
 
