Miscellaneous Games area fixes

--- a/files/en-us/games/introduction/index.html
+++ b/files/en-us/games/introduction/index.html
@@ -17,7 +17,7 @@ tags:
 
 <p>You can truly think of the Web as a better target platform for your game. As we like to say, "the Web is the platform." Let's take a look at the core of the Web platform:</p>
 
-<table class="standard-table">
+<table class="no-markdown standard-table">
  <thead>
   <tr>
    <th scope="col">Function</th>
