--- a/files/en-us/games/techniques/2d_collision_detection/index.html
+++ b/files/en-us/games/techniques/2d_collision_detection/index.html
@@ -15,30 +15,7 @@ tags:
 
 <p>One of the simpler forms of collision detection is between two rectangles that are axis aligned — meaning no rotation. The algorithm works by ensuring there is no gap between any of the 4 sides of the rectangles. Any gap means a collision does not exist.</p>
 
-<pre class="brush: js">var rect1 = {x: 5, y: 5, width: 50, height: 50}
-var rect2 = {x: 20, y: 10, width: 10, height: 10}
-
-if (rect1.x &lt; rect2.x + rect2.width &amp;&amp;
-   rect1.x + rect1.width &gt; rect2.x &amp;&amp;
-   rect1.y &lt; rect2.y + rect2.height &amp;&amp;
-   rect1.y + rect1.height &gt; rect2.y) {
-    // collision detected!
-}
-
-// filling in the values =&gt;
-
-if (5 &lt; 30 &amp;&amp;
-    55 &gt; 20 &amp;&amp;
-    5 &lt; 20 &amp;&amp;
-    55 &gt; 10) {
-    // collision detected!
-}
-</pre>
-
-<div class="hidden">
-<h5 id="Rect_code">Rect code</h5>
-
-<pre class="brush: html">&lt;div id="cr-stage"&gt;&lt;/div&gt;
+<pre class="brush: html hidden">&lt;div id="cr-stage"&gt;&lt;/div&gt;
 &lt;p&gt;Move the rectangle with arrow keys. Green means collision, blue means no collision.&lt;/p&gt;
 &lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crafty/0.5.4/crafty-min.js"&gt;&lt;/script&gt;
 </pre>
@@ -66,9 +43,8 @@ rect2.bind("EnterFrame", function () {
 });
 
 </pre>
-</div>
 
-<p>{{ EmbedLiveSample('Rect_code', '700', '300', '', 'Games/Techniques/2D_collision_detection') }}</p>
+<p>{{ EmbedLiveSample('Axis-Aligned_Bounding_Box', '700', '300', '', 'Games/Techniques/2D_collision_detection') }}</p>
 
 <div class="note">
 <p><strong>Note:</strong> <a href="https://jsfiddle.net/jlr7245/217jrozd/3/">Another example without Canvas or external libraries</a>.</p>
@@ -78,15 +54,12 @@ rect2.bind("EnterFrame", function () {
 
 <p>Another simple shape for collision detection is between two circles. This algorithm works by taking the centre points of the two circles and ensuring the distance between the centre points are less than the two radii added together.</p>
 
-<div class="hidden">
-<h6 id="Playable_code">Playable code</h6>
-
-<pre class="brush: html">&lt;div id="cr-stage"&gt;&lt;/div&gt;
+<pre class="brush: html hidden">&lt;div id="cr-stage"&gt;&lt;/div&gt;
 &lt;p&gt;Move the circle with arrow keys. Green means collision, blue means no collision.&lt;/p&gt;
 &lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crafty/0.5.4/crafty-min.js"&gt;&lt;/script&gt;
 </pre>
 
-<pre class="brush: css">#cr-stage {
+<pre class="brush: css hidden">#cr-stage {
     position: static !important;
     height: 200px !important;
 }
@@ -144,21 +117,8 @@ circle2.bind("EnterFrame", function () {
 });
 
 </pre>
-</div>
 
-<pre class="brush: js">var circle1 = {radius: 20, x: 5, y: 5};
-var circle2 = {radius: 12, x: 10, y: 5};
-
-var dx = circle1.x - circle2.x;
-var dy = circle1.y - circle2.y;
-var distance = Math.sqrt(dx * dx + dy * dy);
-
-if (distance &lt; circle1.radius + circle2.radius) {
-    // collision detected!
-}
-</pre>
-
-<p>{{ EmbedLiveSample('Playable_code', '700', '300', '', 'Games/Techniques/2D_collision_detection') }}</p>
+<p>{{ EmbedLiveSample('Circle_Collision', '700', '300', '', 'Games/Techniques/2D_collision_detection') }}</p>
 
 <p><strong>Note:</strong> <a href="https://jsfiddle.net/jlr7245/teb4znk0/20/">Here is another example without Canvas or external libraries.</a></p>
 
