--- a/files/en-us/games/introduction_to_html5_game_development/index.html
+++ b/files/en-us/games/introduction_to_html5_game_development/index.html
@@ -23,7 +23,7 @@ tags:
 
 <h2 id="Web_Technologies">Web Technologies</h2>
 
-<table class="standard-table">
+<table class="no-markdown standard-table">
  <thead>
   <tr>
    <th scope="col"><strong>Function</strong></th>
