--- a/files/en-us/glossary/routers/index.html
+++ b/files/en-us/glossary/routers/index.html
@@ -9,7 +9,7 @@ tags:
 <ol>
  <li>For the network layer, the router is a networking device that decides data {{Glossary('Packet')}}s directions. They are distributed by retailers allowing user interaction to the internet.</li>
  <li>For a {{Glossary('SPA', 'Single-page application' )}} in the application layer, a router is a library that decides what web page is presented by a given {{Glossary('URL')}}. This middleware module is used for all URL functions, as these are given a path to a file that is rendered to open the next page.</li>
- <li>In the implementation of an {{Glossary('API')}} in a service layer, a router is a software component that parses a request and directs or routes the request to various handlers within a program.  The code usually accepts a response from the handler and facilitates its return to the requester.</li>
+ <li>In the implementation of an {{Glossary('API')}} in a service layer, a router is a software component that parses a request and directs or routes the request to various handlers within a program.  The router code usually accepts a response from the handler and facilitates its return to the requester.</li>
 </ol>
 
 <h2 id="see_also">See also</h2>
