[Markdown][MathML] Prepare MathML for Markdowning (#9685)
* Prepare MathML for Markdowning

* Fix a few more unconvertibles

--- a/files/en-us/web/mathml/element/msubsup/index.html
+++ b/files/en-us/web/mathml/element/msubsup/index.html
@@ -37,9 +37,9 @@ browser-compat: mathml.elements.msubsup
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="x1" src="msubsup.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="x1" src="msubsup.png"></p>
 
-<p>Rendering in your browser: <math displaystyle="true"> <msubsup> <mo> ∫</mo> <mn> 0 </mn> <mn> 1 </mn> </msubsup> </math></p>
+<p>Rendering in your browser: <math> <msubsup> <mo> ∫</mo> <mn> 0 </mn> <mn> 1 </mn> </msubsup> </math></p>
 
 <pre class="brush: html">&lt;math displaystyle="true"&gt;
 
