--- a/files/en-us/web/mathml/element/munderover/index.html
+++ b/files/en-us/web/mathml/element/munderover/index.html
@@ -40,9 +40,9 @@ browser-compat: mathml.elements.munderover
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="integral-0-infinity" src="munderover.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="integral-0-infinity" src="munderover.png"></p>
 
-<p>Rendering in your browser: <math displaystyle="true"> <munderover> <mo> ∫ </mo> <mn> 0 </mn> <mi> ∞ </mi> </munderover> </math></p>
+<p>Rendering in your browser: <math> <munderover> <mo> ∫ </mo> <mn> 0 </mn> <mi> ∞ </mi> </munderover> </math></p>
 
 <pre class="brush: html">&lt;math displaystyle="true"&gt;
 
